@@ -9,7 +9,6 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import uk.gov.hmcts.reform.authorisation.generators.AuthTokenGenerator;
 import uk.gov.hmcts.reform.ccd.document.am.feign.CaseDocumentClient;
-import uk.gov.hmcts.reform.prl.config.launchdarkly.LaunchDarklyClient;
 import uk.gov.hmcts.reform.prl.exception.InvalidResourceException;
 import uk.gov.hmcts.reform.prl.models.documents.Document;
 import uk.gov.hmcts.reform.sendletter.api.LetterWithPdfsRequest;
@@ -17,6 +16,7 @@ import uk.gov.hmcts.reform.sendletter.api.SendLetterApi;
 import uk.gov.hmcts.reform.sendletter.api.SendLetterResponse;
 
 import java.io.IOException;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -24,7 +24,6 @@ import java.util.Optional;
 import java.util.UUID;
 
 import static java.util.Base64.getEncoder;
-import static java.util.stream.Collectors.toList;
 
 @Service
 @Slf4j
@@ -34,6 +33,7 @@ public class BulkPrintService {
     private static final String XEROX_TYPE_PARAMETER = "PRL001";
     private static final String LETTER_TYPE_KEY = "letterType";
     private static final String CASE_REFERENCE_NUMBER_KEY = "caseReferenceNumber";
+    private static final String RECIPIENTS = "recipients";
     private static final String CASE_IDENTIFIER_KEY = "caseIdentifier";
 
     private final SendLetterApi sendLetterApi;
@@ -42,10 +42,9 @@ public class BulkPrintService {
 
     private final AuthTokenGenerator authTokenGenerator;
 
-    private final LaunchDarklyClient launchDarklyClient;
 
 
-    public UUID send(String caseId, String userToken, String letterType, List<Document> documents) {
+    public UUID send(String caseId, String userToken, String letterType, List<Document> documents, String recipientName) {
 
         String s2sToken = authTokenGenerator.generate();
         final List<String> stringifiedDocuments = documents.stream()
@@ -57,20 +56,17 @@ public class BulkPrintService {
                 }
             })
             .map(getEncoder()::encodeToString)
-            .collect(toList());
+            .toList();
         log.info("Sending {} for case {}", letterType, caseId);
-        SendLetterResponse sendLetterResponse = null;
-        if (launchDarklyClient.isFeatureEnabled("soa-bulk-print")) {
-            log.info("******Bulk print is enabled****");
-            sendLetterResponse = sendLetterApi.sendLetter(
+
+        SendLetterResponse sendLetterResponse = sendLetterApi.sendLetter(
                 s2sToken,
                 new LetterWithPdfsRequest(
                     stringifiedDocuments,
                     XEROX_TYPE_PARAMETER,
-                    getAdditionalData(caseId, letterType)
+                    getAdditionalData(caseId, letterType, recipientName)
                 )
             );
-        }
 
         log.info(
             "Letter service produced the following letter Id {} for case {}",
@@ -81,11 +77,12 @@ public class BulkPrintService {
     }
 
 
-    private Map<String, Object> getAdditionalData(String caseId, String letterType) {
+    private Map<String, Object> getAdditionalData(String caseId, String letterType, String recipientName) {
         final Map<String, Object> additionalData = new HashMap<>();
         additionalData.put(LETTER_TYPE_KEY, letterType);
         additionalData.put(CASE_IDENTIFIER_KEY, caseId);
         additionalData.put(CASE_REFERENCE_NUMBER_KEY, caseId);
+        additionalData.put(RECIPIENTS, Arrays.asList(recipientName));
         return additionalData;
     }
 
